# softwareshield-sdk-c

./: .gitignore  README.md  meson.build
license-data/: meson.build  readme.md
license-data/sdk-test-0/: license_data.h  meson.build
license-data/sdk-test-0/1/: sdk-test-0.lic.cpp
license-data/sdk-test-0/2/: sdk-test-0.lic.cpp
license-data/sdk-test-0/3/: sdk-test-0.lic.cpp
license-data/sdk-test-0/4/: sdk-test-0.lic.cpp
license-data/sdk-test-0/5/: sdk-test-0.lic.cpp
src/: GS.cpp  GS.h  GS5.cpp  GS5.h  GS5_Action.cpp  GS5_Action.h  GS5_Ext.cpp  GS5_Ext.h  GS5_Inspector.cpp  GS5_Inspector.h  GS5_Intf.cpp  GS5_Intf.h  GS_Action.cpp  GS_Action.h  GS_Ext.cpp  GS_Ext.h  GS_Inspector.cpp  GS_Inspector.h  GS_Intf.cpp  GS_Intf.h  meson.build
subprojects/: catch2-ex.wrap  catch2.wrap  cxxopts.wrap
test/: meson.build
tests/: meson.build
tests/sdk-test-0/: action-test.cpp  lm-hard-date-test.cpp  lm-period-test.cpp  main.cpp  main.h  meson.build
utils/: meson.build
utils/licman/: README.md  cmd-lock.cpp  cmd-lock.h  cmd-status.cpp  cmd-status.h  helpers.cpp  helpers.h  main.cpp  meson.build  on-exit.h  params.cpp  params.h
